fix selection on firefox

--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -96,7 +96,6 @@ dd {
   }
 }
 
-input,
 label {
   user-select: none;
 }
